# serial

./: CMakeLists.txt  Serial_Library.pro  git-revision.sh  update_revs.bat  update_revs.sh
include/: git_rev_data.h  revision.h
include/serial/impl/: unix.h
src/: revision.cpp  serial.cc
src/impl/: unix.cc  win.cc
src/impl/list_ports/: list_ports_win.cc
